--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@ export default function ExpenseTracker() {
     
     // Send to Google Sheets
     try {
-      //const scriptURL = 'YOUR_GOOGLE_APPS_SCRIPT_URL_HERE'; // You'll replace this
-        const scriptURL = 'https://script.google.com/macros/s/AKfycbxoDfA7rprGKOAqLTVNXaCwouuZ_NaPZmwxFGkmmwt3ld2Lz1E3dcXJb5NFsYIfN66d/exec'
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbxoDfA7rprGKOAqLTVNXaCwouuZ_NaPZmwxFGkmmwt3ld2Lz1E3dcXJb5NFsYIfN66d/exec'; // You'll replace this
       
       if (scriptURL !== 'YOUR_GOOGLE_APPS_SCRIPT_URL_HERE') {
         showNotification('Saving to Google Sheets...');
